<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="#2196F3"
        tools:context=".PorfolioActivity">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="25sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp" />

            <Button
                android:id="@+id/popMovies"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/popMovies"
                android:background="#F08C35"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="popMovie"/>

            <Button
                android:id="@+id/stockHawk"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/stockHawk"
                android:background="#F08C35"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="stockHawk" />

            <Button
                android:id="@+id/buildBigger"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/buildBigger"
                android:background="#F08C35"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="buildBigger" />

            <Button
                android:id="@+id/makeMaterial"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/makeMaterial"
                android:background="#F08C35"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="material" />

            <Button
                android:id="@+id/goUbiquitous"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/goUbiquitous"
                android:background="#F08C35"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="ubiquitous" />

            <Button
                android:id="@+id/capstone"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/capstone"
                android:background="#D84315"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="capstone" />


        </LinearLayout>




    </ScrollView>
</LinearLayout>